--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portafolio",
   "version": "0.1.0",
   "private": true,
-  "homepages": "jodkas.github.io/portafolio",
+  "homepage": "Jodkas.github.io/portafolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +18,7 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "predeplay": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
